fix iframe style fix spacing issue on aurelia-bundling

--- a/style.scss
+++ b/style.scss
@@ -109,6 +109,10 @@ blockquote {
   }
 }
 
+iframe {
+  max-width: 100%;
+}
+
 nav { 
   
   background: rgba(252,252,252,0.92);
